@@ -3,6 +3,8 @@ package org.example.galaxy_trucker.Controller.ClientServer.RMI;
 import org.example.galaxy_trucker.Controller.ClientServer.Settings;
 import org.example.galaxy_trucker.Model.Game;
 import org.example.galaxy_trucker.Model.Player;
+import org.example.galaxy_trucker.Commands.CommandInterpreter;
+import org.example.galaxy_trucker.Commands.Command;
 
 import java.io.BufferedReader;
 import java.io.IOException;
@@ -19,13 +21,12 @@ public class RMIClient extends UnicastRemoteObject implements ClientInterface {
     private ServerInterface server;
     private Player me;
     private Game myGame;
-
+    private CommandInterpreter commandInterpreter;
 
     public RMIClient() throws RemoteException{
         me =  new Player();
         myGame = null;
     }
-
 
     @Override
     public void StartClient() throws IOException, NotBoundException {
@@ -34,30 +35,48 @@ public class RMIClient extends UnicastRemoteObject implements ClientInterface {
         registry = LocateRegistry.getRegistry(Settings.SERVER_NAME, Settings.RMI_PORT);
 
         this.server = (ServerInterface) registry.lookup("CommandReader");
-//      this.server.login(this);
+//        this.server.login(this);
 
-        BufferedReader br = new BufferedReader (new InputStreamReader(System.in));
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
 
+        System.out.println("Insert player ID: ");
+        String playerId = br.readLine();
+
+        System.out.println("Insert game ID: ");
+        String gameId = br.readLine();
 
 //        System.out.println("Insert player name: ");
 //        String name = br.readLine();
 //        System.out.println("Insert game name: ");
 //        String GName = br.readLine();
 //        server.CreateGame(this, name, GName, 2);
+        System.out.println("Insert game level: ");
+        String level = br.readLine();
 
+        String fullCommand = "Login " + playerId + " " + gameId + " " + level;
+
+        commandInterpreter = new CommandInterpreter(playerId, gameId);
+        Command loginCommand = commandInterpreter.interpret(fullCommand);
+
+        server.command(loginCommand);
 
         this.inputLoop();
-
     }
 
+
     private void inputLoop() throws IOException {
-        BufferedReader br = new BufferedReader (new InputStreamReader(System.in));
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
         String cmd;
-        do{
-            System.out.println("Insert Json command: ");
-            cmd = br.readLine();
-            server.append(cmd);
-        }while (!Objects.equals(cmd, null));
+        while (!Objects.equals(cmd = br.readLine(), "end")) {
+            try{
+                Command command = commandInterpreter.interpret(cmd);
+                server.command(command);
+
+            }
+            catch (Exception e){
+                System.out.println(e.getMessage());
+            }
+        }
     }
 
 //    @Override
@@ -72,15 +91,11 @@ public class RMIClient extends UnicastRemoteObject implements ClientInterface {
 //    @Override
 //    public void setPlayerId(String id) throws RemoteException {me.setId(id);}
 
-
-    //--add-opens org.example.galaxy_trucker/org.example.galaxy_trucker.Controller.RMI=java.rmi
     public static void main(String[] args) throws RemoteException, NotBoundException {
-
         try {
             new RMIClient().StartClient();
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
-
 }
